--- a/examples/integrations/openai.ipynb
+++ b/examples/integrations/openai.ipynb
@@ -22,7 +22,8 @@
     "\n",
     "# Configure logging for some informative output\n",
     "from openssm import Logs, logger, mlogger\n",
-    "mlogger.setLevel(mlogger.DEBUG)"
+    "logger.setLevel(logger.WARNING)\n",
+    "mlogger.setLevel(mlogger.WARNING)"
    ]
   },
   {
@@ -31,8 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openssm import GPT3CompletionSSM\n",
-    "ssm = GPT3CompletionSSM()"
+    "from openssm import GPT3ChatCompletionSSM\n",
+    "ssm = GPT3ChatCompletionSSM()"
    ]
   },
   {
@@ -41,27 +42,12 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "07/29/2023 09:07:17 PM [DEBUG]: openssm.utils.canonicalize_user_input (in utils.py line 14) start: user_input: What can I ask you?\n",
-      "07/29/2023 09:07:17 PM [DEBUG]: openssm.utils.canonicalize_user_input (in utils.py line 40) end: user_input: [{'role': 'user', 'content': 'What can I ask you?'}]\n",
-      "07/29/2023 09:07:17 PM [DEBUG]: openssm.utils.canonicalize_user_input (in utils.py line 14) start: user_input: [{'role': 'user', 'content': 'What can I ask you?'}]\n",
-      "07/29/2023 09:07:17 PM [DEBUG]: openssm.utils.canonicalize_user_input (in utils.py line 40) end: user_input: [{'role': 'user', 'content': 'What can I ask you?'}]\n",
-      "07/29/2023 09:07:17 PM [DEBUG]: openssm.logs.wrapper (in logs.py line 97) Calling _call_lm_api with args: ('self=GPT3CompletionSLM()', \"conversation=[{'role': 'user', 'content': 'What can I ask you?'}]\")\n",
-      "07/29/2023 09:07:17 PM [DEBUG]: openssm.logs.wrapper (in logs.py line 97) Calling _make_completion_prompt with args: ('self=GPT3CompletionSLM()', \"conversation=[{'role': 'user', 'content': 'What can I ask you?'}]\")\n",
-      "07/29/2023 09:07:17 PM [DEBUG]: openssm.logs.wrapper (in logs.py line 102) Function _make_completion_prompt returned: [{'role': 'system', 'content': 'Complete this conversation with the assistant’s response, up to 2000 words. Use this format: {\"role\": \"assistant\", \"content\": \"xxx\"}, where \\'xxx\\' is the response. Make sure the entire response is valid JSON, xxx is only a string, and no code of any kind, even if the prompt has code. Escape quotes with \\\\:\\n'}, {'role': 'user', 'content': 'What can I ask you?'}]\n",
-      "07/29/2023 09:07:17 PM [DEBUG]: openssm.logs.wrapper (in logs.py line 102) Function _call_lm_api returned: [{'role': 'assistant', 'content': 'I got nothing.'}]\n",
-      "07/29/2023 09:07:17 PM [DEBUG]: openssm.utils.canonicalize_query_response (in utils.py line 50) start: response: [{'role': 'assistant', 'content': 'I got nothing.'}]\n",
-      "07/29/2023 09:07:17 PM [DEBUG]: openssm.utils.canonicalize_query_response (in utils.py line 83) start: response: [{'role': 'assistant', 'content': 'I got nothing.'}]\n",
-      "07/29/2023 09:07:17 PM [DEBUG]: openssm.utils.canonicalize_query_response (in utils.py line 50) start: response: [{'role': 'assistant', 'content': 'I got nothing.'}]\n",
-      "07/29/2023 09:07:17 PM [DEBUG]: openssm.utils.canonicalize_query_response (in utils.py line 83) start: response: [{'role': 'assistant', 'content': 'I got nothing.'}]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[{'role': 'assistant', 'content': 'I got nothing.'}]"
+       "[<OpenAIObject at 0x142d3a340> JSON: {\n",
+       "   \"role\": \"assistant\",\n",
+       "   \"content\": \"You can ask me anything you're curious about or need assistance with. I'm here to help!\"\n",
+       " }]"
       ]
      },
      "execution_count": 3,
